--- a/config.json
+++ b/config.json
@@ -19,21 +19,21 @@
         ""
     ],
     "BOTOWNER": "†『 ⸙ †ĸɩŋʛ ʋʑʌɩʀ.𝐱͜͡ᴆ 』†",
-    "OWNERLINK": "https://www.facebook.com/profile.php?id=61552682190483",
-    "OWNERID": "61552682190483",
+    "OWNERLINK": "https://www.facebook.com/profile.php?id=61558005913380",
+    "OWNERID": "61558005913380",
     "BOTCREATOR": "†『 ⸙ †ĸɩŋʛ ʋʑʌɩʀ.𝐱͜͡ᴆ 』†",
     "APIKEY": "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",
     "openai": "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",
-    "CREATORLINK": "https://www.facebook.com/profile.php?id=61552682190483",
+    "CREATORLINK": "https://www.facebook.com/profile.php?id=61558005913380",
     "PERMISSION1": [
-        "61552682190483",
+        "61558005913380",
         "",
         "",
         ""
     ],
     "RestartEvery": 30,
     "ONLY": [
-        "61552682190483",
+        "61558005913380",
         "",
         ""
     ],
@@ -42,12 +42,12 @@
     "BOTNAME": "➺ 𓆩『 ⸙   ᴅᴇᴡᴀɴɪ ᴛᴇʀɪ.𝐱͜͡ᴆ  』𓆪",
     "PREFIX": ".",
     "ADMINBOT": [
-        "61552682190483",
-        "100047059713717",
-        "100010054632516",
-        "100086716792385",
-        "100085739395197",
-        "61552682190483",
+        "61558005913380",
+        "61558005913380",
+        "61558005913380",
+        "61558005913380",
+        "61558005913380",
+        "61558005913380",
         "",
         "",
         "",
@@ -71,14 +71,14 @@
         ""
     ],
     "GOD": [
-        "61552682190483"
+        "61558005913380"
     ],
     "DATABASE": {
         "sqlite": {
             "storage": "data.sqlite"
         }
     },
-    "APPSTATEPATH": "𝑴𝒓𝑼𝒛𝒂𝒊𝒓𝑿𝒙𝑿-𝑴𝑻𝑿.json",
+    "APPSTATEPATH": "𝑴𝒓𝐇𝐚𝐦𝐳𝐚 𝐀𝐥𝐢.json",
     "FCAOption": {
         "forceLogin": true,
         "listenEvents": true,
